ops/kubectl/cs_deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: meteor-%ENV%
spec:
  selector:
    matchLabels:
      app: commonswap-%ENV%
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: commonswap-%ENV%
        tier: frontend
    spec:
      containers:
      - name: meteor-%ENV%
        image: gcr.io/%PROJECT_ID%/cs-prod:latest
        # Will start the server on port 8080
        command: ["sh", "-c", 
                  'PORT=8080 MONGO_URL="$MONGO_URL" ROOT_URL="$ROOT_URL" METEOR_SETTINGS="$METEOR_SETTINGS" node main.js']
        resources:
          requests:
            cpu: 300m
            memory: 256Mi
