ops/kubectl/meteor_deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: meteor-prod
spec:
  selector:
    matchLabels:
      app: commonswap-prod
      tier: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: commonswap-prod
        tier: frontend
    spec:
      containers:
      - name: meteor-prod
        image: gcr.io/%PROJECT_ID%/cs-prod:latest
        command: ["METEOR_SETTINGS=$(cat ./meteor_settings.txt)", "node", "main.js"]
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
