ops/kubectl/cs_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs-frontend-%ENV%
  labels:
    app: commonswap-%ENV%
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: commonswap-%ENV%
    tier: frontend
