ops/kubectl/meteor_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-%ENV%
  labels:
    app: commonswap-%ENV%
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: commonswap-%ENV%
    tier: frontend
