ops/kubectl/cs_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cs-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/force-ssl-redirect: true
spec:
  rules:
    - host: staging.commonswap.com
      http:
        paths:
        - path: /
          backend:
            serviceName: cs-frontend-staging
            servicePort: 8080
